criação pagina signup

--- a/signup.html
+++ b/signup.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <title>Sujeitogram - Sua rede social</title>
+  <title>Faça seu cadastro - Sujeitogram</title>
 
 </head>
 
@@ -14,17 +14,8 @@
   <div id="wrapper">
 
     <!-- area container -->
-    <div id="container">
+    <div id="container-signup">
 
-      <!-- area esquerda -->
-      <div class="column left">
-        <div class="main">
-
-        </div>
-
-      </div>
-
-      <!-- area direita -->
       <div class="column right"">
         <div class=" login-panel">
         <div class="logo">
@@ -40,7 +31,7 @@
 
       <div class="infobox">
         <p>
-          Não possui uma conta? <a href="./signup.html">Cadastre-se</a>
+          Não possui uma conta? <a href="#">Cadastre-se</a>
         </p>
 
       </div>
