--- a/signup.html
+++ b/signup.html
@@ -16,62 +16,79 @@
     <!-- area container -->
     <div id="container-signup">
 
-      <div class="column right"">
+      <div class="column">
         <div class=" login-panel">
-        <div class="logo">
-          <img class="logo-img" src="assets/logo.png" alt="logo sujeitogram" />
+          <div class="logo">
+            <img class="logo-img" src="assets/logo.png" alt="logo sujeitogram" />
+          </div>
+
+          <div class="message">
+            <span>Cadastre-se para ver fotos e videos dos seus amigos.</span>
+          </div>
+
+          <button class="cta-button">
+            Entrar com Facebook
+          </button>
+
+          <div class="divisor-container">
+            <div class="line"></div>
+            <div class="divisor-tag">ou</div>
+            <div class="line"></div>
+          </div>
+
+          <form>
+            <input name="username" type="text" placeholder="Número de celular ou email" name="email" />
+            <input name="username" type="text" placeholder="Nome completo" name="name" />
+            <input name="username" type="text" placeholder="Username" name="username" />
+            <input name="password" type="password" placeholder="Senha" />
+
+            <input type="submit" value="Entrar" />
+          </form>
         </div>
-        <form>
-          <input name="username" type="text" placeholder="Telefone, usuario ou email" />
-          <input name="password" type="password" placeholder="Senha" />
 
-          <input type="submit" value="Entrar" />
-        </form>
-      </div>
+        <div class="infobox">
+          <p>
+            Tem uma conta? <a href="./index.html">Conecte-se</a>
+          </p>
 
-      <div class="infobox">
-        <p>
-          Não possui uma conta? <a href="#">Cadastre-se</a>
-        </p>
-
-      </div>
-
-      <div class="get-app-panel">
-        Obtenha o Aplicativo.
-        <div class="app-buttons">
-          <a href="#">
-            <img src="assets/appstore.png" alt="baixe na AppStore">
-          </a>
-          <a href="#">
-            <img src="assets/googleplay.png" alt="baixe na GooglePlay">
-          </a>
         </div>
-      </div>
 
+        <div class="get-app-panel">
+          Obtenha o Aplicativo.
+          <div class="app-buttons">
+            <a href="#">
+              <img src="assets/appstore.png" alt="baixe na AppStore">
+            </a>
+            <a href="#">
+              <img src="assets/googleplay.png" alt="baixe na GooglePlay">
+            </a>
+          </div>
+        </div>
+
+
+      </div>
 
     </div>
 
-  </div>
-
-  <footer>
-    <div class="footer-inner">
-      <a href="#">About us</a>
-      <a href="#">Support</a>
-      <a href="#">Blog</a>
-      <a href="#">Press</a>
-      <a href="#">API</a>
-      <a href="#">Jobs</a>
-      <a href="#">Privacy</a>
-      <a href="#">Terms</a>
-      <a href="#">Directory</a>
-      <a href="#">Profiles</a>
-      <a href="#">Hashtags</a>
-      <a href="#">Language</a>
-      <div class="text-small">
-        © 2024 Instagram
+    <footer>
+      <div class="footer-inner">
+        <a href="#">About us</a>
+        <a href="#">Support</a>
+        <a href="#">Blog</a>
+        <a href="#">Press</a>
+        <a href="#">API</a>
+        <a href="#">Jobs</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a href="#">Directory</a>
+        <a href="#">Profiles</a>
+        <a href="#">Hashtags</a>
+        <a href="#">Language</a>
+        <div class="text-small">
+          © 2024 Instagram
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
   </div>
 
